chore: add route vercel

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,10 @@
         "src": "app.js",
         "use": "@now/node"
       }
-    ]
+    ],
+    "routes": [{
+          "src": "/(.*)",
+          "dest": "index.js"
+        }
+      ]
   }
